<resources>
    <string name="app_name">BasicWeather</string>
    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>
    <string name="city">City</string>
    <string name="temperature">0</string>
    <string name="feelsLike">Feels Like</string>
    <string name="humidity">Humidity</string>
    <string name="tempMin">L:</string>
    <string name="tempMax">H:</string>
</resources>