<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLO"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mist_white"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/widgetGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:constraint_referenced_ids="txtCity,
        iconImg, textDescription, hourlyForecastTV,textFeelsLike,
        textTemp, textTempMinMax, textHum, weatherRV, dailyRV, dailyForecastTV">

    </androidx.constraintlayout.widget.Group>

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/city"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintBottom_toTopOf="@+id/textTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>


    <ImageView
        android:id="@+id/iconImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toStartOf="@id/textDescription"
        app:layout_constraintTop_toBottomOf="@id/textTemp">

    </ImageView>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:paddingLeft="4dp"
        android:text="Description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTemp">

    </TextView>

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCity" />

    <TextView
        android:id="@+id/textTempMinMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/tempMin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />


    <TextView
        android:id="@+id/textFeelsLike"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:text="@string/feelsLike"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toStartOf="@id/textHum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTempMinMax" />

    <TextView
        android:id="@+id/textHum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/humidity"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textFeelsLike"
        app:layout_constraintTop_toBottomOf="@id/textTempMinMax" />

    <TextView
        android:id="@+id/hourlyForecastTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:text="Hourly Forecast"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFeelsLike">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weatherRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hourlyForecastTV">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/dailyForecastTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/weatherRV"
        android:textSize="24dp"
        android:text="8-Day Forecast"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dailyRV"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="4dp"
        android:layout_height="220dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dailyForecastTV">

    </androidx.recyclerview.widget.RecyclerView>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"
        android:background="@color/mist_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <Button
            android:id="@+id/searchCityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/mist_white"
            android:text="Search city"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center_vertical"></Button>


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>